# km003c-rs

./: .gitignore  71-powerz-km003c.rules  99-powerz-km003c.rules  99-usbmon.rules  CHANGELOG.md  CRUSH.md  Cargo.toml  README.md  cap_orig_with_pd.13.txt  cap_rust_simple_logger.16.txt  capture_output_test1_1_app_open_close.28.txt  capture_output_test1_1_app_open_close.NEW.28.txt  justfile  orig_adc_1000hz.6.txt  orig_adc_1hz.6.txt  orig_adc_50hz.6.txt  orig_adc_record.6.txt  out.txt  out2.txt  packet_log.csv  protocol_flow.md  pyproject.toml  rust_code_cap0.log.2025-06-17  test_bindings.py  test_main_extraction.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
analysis_logs/: parsed_pd_db.md  parsed_pd_packets_from_payload.md
docs/: .~lock.KM002C&3C API Description.docx#  analysis.md  analysis_short.md  boot_info.md  development.md  ghidra.md  llm.md  magic_strings.txt  new_analysis.md  new_analysis_gemini.md  notes.md  pcap_analysis.md  pd.md  pd_connection_events.md  pd_event_analysis.md  pd_event_structures.md  pd_notes.md  prompt.md  protocol.md  protocol_reversed.md  protocol_short.md  sqlite_database.md  todo.md  todo_from_okhsunrog.txt  verification_plan.md
km003c-cli/: Cargo.toml
km003c-cli/src/: main.rs
km003c-egui/: Cargo.toml
km003c-egui/src/: main.rs  measurement.rs  offline_export.rs  offline_view.rs  pd_connection.rs  pd_decoder.rs  pd_trace_view.rs  recording.rs
km003c-lib/: Cargo.toml  README.md  combined_packet_analysis.md  comprehensive_analysis.csv  comprehensive_analysis.md  detailed_analysis.txt  km003c_lib.pyi  raw_captures.parquet  test_captures.parquet
km003c-lib/examples/: README.md  README_comprehensive_analysis.md  analyze_parquet.rs  analyze_pd_data.rs  analyze_pd_packets.rs  analyze_sqlite.rs  batch_analyze.rs  calibration_auth.rs  collect_pd_data.rs  comprehensive_pcap_analysis.rs  extract_pd_payloads.rs  merge_captures.rs  parse_tshark.rs  pcap_to_csv.rs  pd_event_sequences.rs  pd_message_flow.rs  print_pd_samples.rs  process_pcapng.rs  search_connection.rs  settings.rs  sqlite_pd.rs  summarize_parquet.rs  test_main_extraction.rs  tshark_print_pd.rs  usbpd_stats.rs  verify_extended_header.rs
km003c-lib/src/: adc.rs  adcqueue.rs  analysis.rs  auth.rs  capture.rs  constants.rs  device.rs  error.rs  lib.rs  message.rs  offline.rs  packet.rs  pd.rs  pd_decode.rs  pd_trace.rs  python.rs  settings.rs  tests.rs
km003c-lib/tests/: adc_tests.rs  adcqueue_tests.rs  edge_cases.rs  extended_header.rs  extracted_pd_payloads.txt  new_api.rs  packet_parsing.rs  pcap_parsing.rs  pd_parsing.rs  pd_tests.rs  pd_trace_tests.rs  roundtrip.rs  serialization.rs  settings_tests.rs  usbpd_crate_parsing.rs
km003c-lib/tests/common/: mod.rs
logs/: orig_app_cap0.txt  rust_app_cap0.txt  win_app_cap1.txt
matching_record/: export.md  export.sqlite  protocol_flow.md  wireshark_0.7.csv  wireshark_0.7.pcapng
orig_app/powerz_km_win_3.0.0_beta/firmware/: KM002C_Lite_V2.0.0.mencrypt  KM002C_V2.0.0.mencrypt  KM003C_V2.0.0.mencrypt  MI2_V2.0.0.mencrypt
orig_app/powerz_km_win_3.0.0_beta/qt5_x32/log/: 2025-02-24.txt
orig_app/powerz_km_win_3.0.0_beta/qt5_x32/translations/: qt_ca.qm  qt_fr.qm  qt_hu.qm  qt_it.qm  qt_ko.qm  qt_pl.qm  qt_ru.qm  qt_sk.qm  qt_uk.qm
orig_app/powerz_km_win_3.0.0_beta/qt5_x64/QtQuick/Controls.2/Material/: SwitchIndicator.qml
orig_app/powerz_km_win_3.0.0_beta/qt5_x64/log/: 2025-02-24.txt  2025-03-18.txt  2025-03-19.txt
orig_app/powerz_km_win_3.0.0_beta/qt5_x64/translations/: qt_bg.qm  qt_cs.qm  qt_da.qm  qt_de.qm  qt_es.qm  qt_ja.qm  qt_zh_TW.qm
orig_app/powerz_km_win_3.0.0_beta/qt6_x64/: bat.txt
orig_app/powerz_km_win_3.0.0_beta/qt6_x64/log/: 2025-02-24.txt  2025-03-17.txt
orig_app/powerz_km_win_3.0.0_beta/qt6_x64/translations/: qt_de.qm
orig_app/stable_2.4.0/POWER-Z/Firmware/KM003C/: KM003C_V1.9.5.mencrypt  expect.xml
pd_analisys/: pd_capture_new.9.pcapng  pd_new.sqlite
python/km003c/: __init__.py  km003c_lib.pyi
src/: device.rs  error.rs  lib.rs  main.rs  protocol.rs
wireshark/: orig_adc_1000hz.6.pcapng  orig_adc_50hz.6.pcapng  orig_adc_record.6.pcapng  orig_open_close.16.pcapng  orig_with_pd.13.pcapng  orig_with_pd.sqlite  rate_cycling_test.pcapng  rate_cycling_test_all.txt  rust_simple_logger.16.pcapng  test1_1_app_open_close.28.json  test1_1_app_open_close.28.pcapng  test1_1_app_open_close.txt  test1_2_app_disconnect.pcapng  test1_2_app_disconnect.txt  test2_1_set_rate_10sps.pcapng  test2_1_set_rate_10sps.txt  test4_1_online_chart_all.txt  test4_1_online_chart_behavior.pcapng  test5_1_pd_mode_switch.pcapng  test5_1_pd_mode_switch.txt  test5_2_pd_capture.pcapng  test5_2_pd_capture.txt
