[package]
name = "km003c-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
futures-lite = "2.6.0"
hex = "0.4.3"
nusb = "0.1.14"
rtshark = "3.2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
