[package]
name = "km003c-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line tools for the ChargerLAB POWER-Z KM003C"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
km003c-lib.workspace = true
tokio.workspace = true
clap = { version = "4.6.2", features = ["derive"] }
tracing-subscriber.workspace = true
tracing.workspace = true
usbpd.workspace = true
# Keep this aligned with usbpd's public quantity types.
uom.workspace = true
