[package]
name = "km003c-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line tools for the ChargerLAB POWER-Z KM003C"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "offline-log"
path = "src/bin/offline_log.rs"

[dependencies]
km003c-lib = { workspace = true, features = ["usbpd"] }
tokio.workspace = true
clap = { version = "4.6.2", features = ["derive"] }
hex = "0.4"
serde_json = "1.0.149"
tracing-subscriber.workspace = true
tracing.workspace = true
