[package]
name = "km003c-egui"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
description = "Graphical monitor for the ChargerLAB POWER-Z KM003C"
license = "MIT"
repository = "https://github.com/okhsunrog/km003c-rs"

[[bin]]
name = "km003c-egui"
path = "src/main.rs"

[dependencies]
km003c-lib = { path = "../km003c-lib" }
eframe = "0.35.0"
egui_plot = "0.36.0"
tokio = { version = "1.53.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
usbpd = { git = "https://github.com/okhsunrog/usbpd", rev = "b5dd12e" }
# Keep this aligned with usbpd's public quantity types.
uom = "0.36"
