[package]
name = "km003c-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Graphical monitor for the ChargerLAB POWER-Z KM003C"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "km003c-egui"
path = "src/main.rs"

[dependencies]
km003c-lib = { workspace = true, features = ["usbpd"] }
eframe = "0.35.0"
egui_plot = "0.36.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
