[package]
name = "km003c-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT"
repository = "https://github.com/okhsunrog/km003c-rs"

[dependencies]
modular-bitfield = "0.12"
nusb = { version = "0.2.0", features = ["tokio"] }
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1.10"
num_enum = "0.7"
zerocopy = { version = "0.8", features = ["derive"] }
strum_macros = "0.27"
usbpd = { version = "1.1.3", features = ["log"] }
uom = { version = "0.36", default-features = false, features = ["std", "si"] }
polars = { version = "0.50", features = ["lazy", "parquet", "csv", "json", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }


