[package]
name = "km003c-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
description = "Protocol parser and async USB library for the ChargerLAB POWER-Z KM003C"
license = "MIT"
repository = "https://github.com/okhsunrog/km003c-rs"

[lib]
name = "km003c_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
modular-bitfield = "0.13.1"
nusb = { version = "0.2.5", features = ["tokio"] }
thiserror = "2.0.19"
tracing = "0.1.44"
tokio = { version = "1.53.0", features = ["full"] }
bytes = "1.12.1"
num_enum = "0.7.6"
zerocopy = { version = "0.8.54", features = ["derive"] }
strum_macros = "0.28.0"
serde = { version = "1.0.229", features = ["derive"], optional = true }
hex = "0.4"
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }
aes = "0.9.1"
crc32fast = "1.5.0"
rand = "0.10.2"

[features]
default = []
python = ["pyo3"]
serde = ["dep:serde"]
