[package]
name = "km003c-lib"
version.workspace = true
edition.workspace = true
rust-version = "1.89"
authors.workspace = true
description = "Protocol parser and async USB library for the ChargerLAB POWER-Z KM003C"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/km003c-lib"
readme = "README.md"
keywords = ["usb", "usb-c", "power-meter", "km003c", "async"]
categories = ["hardware-support", "asynchronous", "api-bindings"]
exclude = ["Cargo.lock", "*.parquet"]

[lib]
name = "km003c_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
modular-bitfield = "0.13.1"
nusb = { version = "0.2.5", features = ["tokio"] }
thiserror = "2.0.19"
tracing.workspace = true
tokio.workspace = true
bytes = "1.12.1"
num_enum = "0.7.6"
zerocopy = { version = "0.8.54", features = ["derive"] }
strum_macros = "0.28.0"
serde = { version = "1.0.229", features = ["derive"], optional = true }
hex = "0.4"
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }
aes = "0.9.1"
crc32fast = "1.5.0"
rand = "0.10.2"
uom.workspace = true

[features]
default = []
python = ["dep:pyo3"]
serde = ["dep:serde", "uom/serde"]
